--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.3",
+    "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
     "gh-pages": "^2.0.1",
     "react": "^16.8.4",
